--- a/index1.html
+++ b/index1.html
@@ -48,7 +48,7 @@
 		.row3-col1{
 			width: 25%;
 			height: 200px;
-			background-color: green;
+			background-color: rgb(128, 0, 0);
 			float: left;
 		}
 		.row3-col2{
