--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		.row1{
 			
 			height: 100px;
-			background-color: rgb(0, 255, 21);
+			background-color: rgba(40, 44, 255, 0.87);
 			text-align: center;
 			font-size: 50px;
 			color: aqua;
