--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			background-color: rgba(40, 44, 255, 0.87);
 			text-align: center;
 			font-size: 50px;
-			color: aqua;
+			color: rgb(255, 174, 0);
 			
 		}
 		.row2{
