--- a/index.html
+++ b/index.html
@@ -195,12 +195,12 @@
 					<div class="row3-col1-row4"><a href="">Gallery</a></div>
 					<div class="row3-col1-row5"> <a href="">Contact us</a></div>
 				</div>
-				<!div class="row3col1-divide2" > 
-					<!div class="row3col1-divide2-box">
-						<!img src="cloud.jpg" width="100px" height="200">   
-					Animation
-					<!/div> 
-				<!/div>	
+				<div class="row3col1-divide2" > 
+					<div class="row3col1-divide2-box">
+						<img src="cloud.jpg" width="100px" height="140">   
+						Animation
+					</div> 
+				</div>	
 			</div>
 			<div class="row3-col2"> 
 			   <img src="1.jpg.jpg" width="400px" height="200px"/>
