modified in index.html in colors

--- a/Varibles in js.html
+++ b/Varibles in js.html
@@ -5,13 +5,17 @@
 	
 </head>
 <body>
-
+Md Alam <br/>
 </body>
 <script type="text/javascript">
 var nm="Md Afroz";
 var nm="Mohammad Aariz";
 var _test="testing";
-var a="tech";p
+var a="tech";
+document.write(nm);
+document.write("<br>");
+document.write(_test);
+document.write("<br>");
 document.write(a);
 //nm="Welcome to Wscube Tech"
 //nm="Mohammad Aariz"
