--- a/put and get data.html
+++ b/put and get data.html
@@ -9,9 +9,9 @@
 	</div>
 </body>
 <script type="text/javascript">
-	//var x= doccument.getElementsByClassName("main").innerHTML="<h1> Mohammad AAriz </h1>" ;
-	var X= documentocument.getElementById("main")innerHTML="<h1> welcome to mohammad AAriz >/h1> aa";
-	//console.log(X);
-	alert(X);
+	//var X=document.getElementById("main").innerHTML="<h1> Mohammad AAriz </h1>" ;
+	var X= document.getElementById("main").innerHTML="<h1> welcome to mohammad AAriz </h1>";
+	console.log(X);
+	//alert(X);
 </script>
 </html>
