--- a/put and get data from html.html
+++ b/put and get data from html.html
@@ -4,23 +4,24 @@
 	<title> put and get data from html </title>
 </head>
 <body>
-	<div class="main">
-		<h1>													
+	<div id="main">
+		<h1>												
 		welcome wscube tech
 		</h1>
 		
 	</div>
 	<div>
-		wscube tech
+			wscube tech
 	</div>
+	
 		
 	
 </body>
 <script type="text/javascript">
-	var x= document.getElementById("main").innerHTML= "<h1> wscube Tech </h1>" ;
+	var x=document.getElementById("main").innerHTML="<h1> wscube tech </h1>" ;
 	//document.getElementsByClassName("main")[1].innerHTML;
-	console.log(x);
-	//alert(x);
+	//console.log(x);
+	alert(x);
 	
 </script>
 </html>
