color change in home.html

--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@ Home Page
 			width: 200px;
 			height: 100px;
 			text-align: left;
-			background-color: aqua
+			background-color: rgb(255, 0, 64)
 				
 			
 		}
