--- a/home.html
+++ b/home.html
@@ -5,9 +5,11 @@ Home Page
 </title>
 	<style>
 		#a{
-			height: 300px;
+			height: 700px;
+			background-color: green;
 			text-align: ceneter;
-			background: e2e2e2;
+
+			al
 		}
 		.women{
 			width: 200px;
@@ -21,7 +23,7 @@ Home Page
 </head>
 <body>
 <div>
-<h1 id="a"> ZUAAR CREATION </h1>
+	<h1 id="a"> ZUAAR CREATION </h1>
 </div>
 <div class="women">
 	Women
