change in home.html

--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@ Home Page
 	<style>
 		#a{
 			height: 700px;
-			background-color: green;
+			text-decoration-color: green;
 			text-align: ceneter;
 
 			al
