--- a/home.html
+++ b/home.html
@@ -6,10 +6,10 @@ Home Page
 	<style>
 		#a{
 			height: 700px;
-			text-decoration-color: green;
+			width: 200px;
 			text-align: ceneter;
 
-			al
+			
 		}
 		.women{
 			width: 200px;
