--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@ Home Page
 </title>
 	<style>
 		#a{
-			height: 700px;
+			height: 400px;
 			width: 200px;
 			text-align: ceneter;
 
@@ -14,8 +14,8 @@ Home Page
 		.women{
 			width: 200px;
 			height: 100px;
-			text-align: left;
-			background-color: rgb(255, 0, 64)
+			text-align: center;
+			background-color: rgb(111, 0, 255)
 				
 			
 		}
@@ -26,7 +26,7 @@ Home Page
 		<h1 id="a"> ZUAAR CREATION </h1>
 	</div>
 	<div class="women">
-		Women
+		Women product
 	</div>
 </body>
 </html>
