--- a/home.html
+++ b/home.html
@@ -1,9 +1,7 @@
 <html>
 <head>
-<title>
-Home Page
-</title>
-	<style>
+<title> Home Page </title>
+	<style type="text.css">
 		#a{
 			height: 400px;
 			width: 200px;
