--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <title> Home Page </title>
 	<style type="text.css">
 		#a{
-			height: 400px;
+			height: 700px;
 			width: 200px;
 			text-align: ceneter;
 
@@ -13,7 +13,7 @@
 			width: 200px;
 			height: 100px;
 			text-align: center;
-			background-color: rgb(111, 0, 255)
+			text-decoration-color: rgb(111, 0, 255)
 				
 			
 		}
